--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -182,7 +182,7 @@ div#intro {
   top: 0;
   animation-name: intro;
   animation-duration: 1s;
-  animation-delay: 3s;
+  animation-delay: 8s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -195,8 +195,8 @@ div#intro img {
   left: 50%;
   margin-left: -50px;
   animation-name: intro_img;
-  animation-duration: 2s;
-  animation-delay: 1s;
+  animation-duration: 3s;
+  animation-delay: 0s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -209,8 +209,16 @@ div#login {
   0% {
     transform: rotate(0);
   }
-  50% {
-    transform: rotate(60deg);
+  20% {
+    transform: rotate(10deg);
+  }
+
+  40% {
+    transform: rotate(0deg);
+  }
+
+  60% {
+    transform: rotate(-10deg);
   }
 
   100% {
