--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -66,7 +66,7 @@ body {
 }
 
 div#app {
-  padding: 5px 5px 50px 0;
+  padding: 5px 5px 50px 5px;
   max-height: 88vh;
   overflow: hidden;
   position: relative;
@@ -80,6 +80,7 @@ h1 {
 
 h2 {
   font-size: 1.4rem;
+  width: 100vw;
 }
 
 h3 {
@@ -186,14 +187,14 @@ div#intro {
 }
 
 div#intro img {
-  width: 100px;
+  width: 120px;
   height: auto;
   position: absolute;
-  top: 120px;
+  top: 150px;
   left: 50%;
-  margin-left: -50px;
+  margin-left: -60px;
   animation-name: intro_img;
-  animation-duration: 3s;
+  animation-duration: 4s;
   animation-delay: 0s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -205,48 +206,46 @@ div#login {
 
 @keyframes intro_img {
   0% {
-    transform: rotate(0);
+    filter: hue-rotate(-0.25turn);
   }
   20% {
-    transform: rotate(10deg);
+    filter: hue-rotate(-2.25turn);
   }
 
   40% {
-    transform: rotate(0deg);
+    filter: hue-rotate(-0.65turn);
   }
 
   60% {
-    transform: rotate(-10deg);
+    filter: hue-rotate(-0.35turn);
   }
 
   100% {
-    transform: rotate(0deg);
+    filter: hue-rotate(-1.65turn);
   }
 }
 
 @keyframes intro {
   from {
-    transform: translateY(0px);
     display: block;
     opacity: 100;
   }
   to {
-    transform: translateY(0px);
     display: none;
     opacity: 0;
   }
 }
 
-#KaiOsAd {
+#KaiOSAd {
   height: 200px;
   width: 240px;
 }
 
-#KaiOsAds-Wrapper {
+#KaiOSAds-Wrapper {
   padding: 10px;
 }
 
-#KaiOsAds-Wrapper iframe {
+#KaiOSAds-Wrapper iframe {
   width: 220px;
 }
 
