--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -27,12 +27,15 @@
   overflow-wrap: break-word;
   word-wrap: break-word;
   scroll-behavior: smooth;
-
   /* Adds a hyphen where the word breaks */
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 :focus {
@@ -60,18 +63,20 @@ body {
   max-width: 100%;
   height: 100%;
   width: 100%;
-  max-width: 100vw;
   overflow: hidden;
   background: white;
 }
 
 div#app {
-  padding: 5px 5px 50px 5px;
+  padding: 0px;
   max-height: 88vh;
   overflow: hidden;
   position: relative;
-  width: 100%;
   top: 0px;
+}
+
+#wrapper {
+  padding: 0px;
 }
 
 h1 {
@@ -109,8 +114,8 @@ button {
   font-size: 1rem;
   background: rgb(255, 255, 255);
   padding: 7px;
-  width: 90vw;
-  margin: 0 0 15px 0vw;
+  width: 90%;
+  margin: 0 0 15px 0;
   color: black;
   border-radius: 10px;
   border: 3px solid gray;
@@ -151,10 +156,11 @@ textarea {
 }
 
 input {
-  width: 95%;
+  width: 90%;
   height: 30px;
   padding: 3px;
-  border: 1px solid silver;
+  border: 2px solid silver;
+  border-radius: 10px;
 }
 
 label {
@@ -201,7 +207,8 @@ div#intro img {
 }
 
 div#login {
-  padding: 30px 0 0 0;
+  padding: 10px;
+  outline: 2px solid red;
 }
 
 @keyframes intro_img {
@@ -493,34 +500,13 @@ article div.user-date span {
 /*
  SETTINGS
  */
-
+#settings_page {
+  padding: 0px;
+  outline: 1px solid red;
+}
 div#top {
   position: fixed;
   top: 0;
-}
-
-div#settings {
-  display: none;
-  height: 92vh;
-  width: 100%;
-  padding: 0px 0 50px 0;
-  overflow: hidden;
-  top: 0px;
-  z-index: 3;
-  background: rgb(231, 231, 231);
-}
-
-div#settings div#text {
-  margin: 0 0 20px 0;
-}
-div#settings h2 {
-  padding: 0 10px 0 10px;
-}
-
-div#settings label {
-  min-width: 80%;
-  height: 30px;
-  margin: 5px 5px 0 0;
 }
 
 article {
@@ -579,4 +565,25 @@ div#message-input input {
   border: 2px solid silver;
   border-radius: 10px;
   width: 100%;
+}
+
+#start {
+  max-width: 700px;
+  padding: 10px;
+}
+
+#start p {
+  height: 70vh;
+  overflow-y: auto;
+  max-width: 700px;
+}
+
+#start p:focus {
+  background: none;
+}
+
+#start img {
+  width: 40%;
+  display: block;
+  margin: 10px 0 0px 0;
 }
