--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -40,7 +40,6 @@
 
 :focus {
   outline: none;
-  background: var(--color-four);
 }
 
 ::-moz-focus-inner {
@@ -83,7 +82,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   width: 100vw;
 }
 
@@ -114,7 +113,7 @@ button {
   background: rgb(255, 255, 255);
   width: 95%;
   padding: 5px;
-  margin: 0 0 15px 0px;
+  margin: 5px 0 15px 0px;
   color: black;
   border-radius: 1px;
   border: 2px solid gray;
@@ -125,6 +124,30 @@ button {
 button:focus {
   background: orange;
   border: 0px solid gray;
+}
+
+a.button-style {
+  font-size: 1rem;
+  background: rgb(255, 255, 255);
+  width: 95%;
+  padding: 5px;
+  margin: 10px 0 15px 0px;
+  color: black;
+  border-radius: 1px;
+  border: 2px solid gray;
+  font-weight: 700;
+  min-height: 40px;
+  font-family: "Roboto" !important;
+  display: block;
+  text-align: center;
+}
+a.button-style:focus {
+  background: orange;
+  border: 0px solid gray;
+}
+
+a {
+  text-decoration: none;
 }
 
 select {
@@ -277,6 +300,11 @@ div#login {
 
 #KaiOSAds-Wrapper iframe {
   width: 240px;
+}
+
+.page {
+  padding: 10px;
+  max-width: 50%;
 }
 
 /*///////////////////////////
@@ -671,5 +699,10 @@ div#message-input input {
     min-width: 100vw;
     display: flex;
     justify-content: center;
+  }
+
+  .page {
+    min-width: 400px;
+    max-width: 400px !important;
   }
 }
