--- a/application/assets/css/qr-reader.css
+++ b/application/assets/css/qr-reader.css
@@ -4,35 +4,19 @@ div#qr-screen {
   position: fixed;
   z-index: 200000;
   display: block;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   z-index: 2000000000000;
   display: none;
 }
 
 #video {
-  bottom: 0;
-  height: auto;
-  min-height: 100%;
-  min-width: 100%;
-  position: fixed;
-  right: 0;
-  width: auto;
-}
-
-#startDecoding {
-  background: #0095dd;
-  border-radius: 40px;
-  color: #fff;
-  font-family: Arial, sans;
-  font-size: 20px;
-  left: 50%;
-  margin: -30px 0 0 -95px;
-  padding: 20px;
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  width: 150px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 #corner-nw,
