--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -483,18 +483,17 @@ div#bottom-bar div.button-center:hover img {
 
 div#top-bar {
   position: fixed;
+  z-index: 2000;
   top: 0px;
   left: 0px;
   height: 18px;
-  z-index: 4;
+  z-index: 6;
   background: none;
   min-width: 100vw;
-}
 
-div#top-bar img {
-  margin: 3px 0 0 5px;
-  max-height: 15px;
-  color: white;
+  display: flex;
+  justify-content: center; /* Horizontally center all child elements */
+  align-items: center; /* Vertically center all child elements */
 }
 
 div#top-bar div#inner {
@@ -503,33 +502,65 @@ div#top-bar div#inner {
 
 div#top-bar div {
   background: none;
-  color: rgb(14, 13, 13);
+  color: white;
   padding: 2px;
+  font-size: 0.8rem;
 }
 
-div#top-bar div.top-center {
-  background: none;
-  color: black;
-  padding: 2px;
-  width: 30%;
-  text-align: center;
+div#top-bar div.button-center img {
+  width: 30px;
 }
 
-div#top-bar div.top-left {
+div#top-bar div.button-left {
   background: none;
-  color: black;
+  color: white;
   padding: 2px;
-  width: 20px;
-  text-align: left;
-  width: 30%;
+  width: 32%;
+  display: flex;
+  justify-content: flex-start;
 }
 
-div#top-bar div.top-right {
+div#top-bar div.button-left:hover img {
+  width: 35px;
+}
+
+div#top-bar div.button-left img {
+  width: 30px;
+}
+
+div#top-bar div.button-right img {
+  width: 30px;
+}
+
+div#top-bar div.button-right {
   background: none;
-  color: black;
+  color: white;
   padding: 2px;
-  width: 30%;
-  text-align: right;
+  width: 32%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+div#top-bar div.button-right:hover img {
+  max-width: 35px;
+}
+
+div#top-bar div.button-center {
+  display: flex; /* Enable flexbox for the button-center div */
+  justify-content: center; /* Horizontally center the image */
+  align-items: center; /* Vertically center the image */
+  background: none;
+  color: white;
+  padding: 2px;
+  width: 32%;
+}
+
+div#top-bar div.button-center img {
+  width: 30px;
+}
+
+div#top-bar div.button-center:hover img {
+  width: 35px;
 }
 
 article {
@@ -711,6 +742,7 @@ div#message-input input {
     min-width: 100%;
     max-width: 100%;
     overflow: scroll;
+    padding: 50px 0 0 0;
   }
 
   article {
@@ -754,6 +786,22 @@ div#message-input input {
     width: 50px;
   }
 
+  div#top-bar {
+    margin: 0 0 20px 0;
+  }
+
+  div#top-bar div.button-left img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-right img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-center img {
+    width: 50px;
+  }
+
   html,
   body {
     font-family: "Roboto" !important;
@@ -794,6 +842,7 @@ div#message-input input {
     min-width: 100%;
     max-width: 100%;
     overflow: scroll;
+    padding: 50px 0 0 0;
   }
 
   article {
@@ -838,15 +887,39 @@ div#message-input input {
   }
 
   div#bottom-bar div.button-left:hover img {
-    width: 55px;
+    width: 50px;
   }
 
   div#bottom-bar div.button-right:hover img {
-    width: 55px;
+    width: 50px;
   }
 
   div#bottom-bar div.button-center:hover img {
-    width: 55px;
+    width: 50px;
+  }
+
+  div#top-bar div.button-left img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-right img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-center img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-left:hover img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-right:hover img {
+    width: 50px;
+  }
+
+  div#top-bar div.button-center:hover img {
+    width: 50px;
   }
 
   html,
