--- a/webpage/assets/assets/css/main.css
+++ b/webpage/assets/assets/css/main.css
@@ -642,6 +642,10 @@ div#top {
   top: 0;
 }
 
+div.text {
+  padding: 20px;
+}
+
 #chat {
   background: white;
 }
@@ -739,6 +743,10 @@ div#message-input input {
 
 #open-peer-menu {
   padding: 10px;
+}
+
+#addressbook button:last-child {
+  margin-bottom: 50px;
 }
 
 @media screen and (min-width: 400px) and (max-width: 1000px) {
