--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -585,7 +585,13 @@ article div.user-date span {
 }
 
 article img {
-  min-width: 100%;
+  width: 100%;
+}
+
+article .map-component {
+  width: 100%;
+  height: 200px;
+  outline: 2px solid red;
 }
 
 [id*="page-"] {
@@ -770,8 +776,8 @@ div#message-input input {
 
 @media screen and (min-width: 400px) and (max-width: 1000px) {
   #app {
-    min-width: 100%;
-    max-width: 100%;
+    min-width: 400px;
+    max-width: 400px;
     overflow: scroll;
     padding: 50px 0 0 0;
   }
@@ -779,6 +785,7 @@ div#message-input input {
   article {
     min-width: 400px;
     max-width: 400px !important;
+    display: block;
   }
 
   article img {
