--- a/webpage/assets/assets/css/main.css
+++ b/webpage/assets/assets/css/main.css
@@ -76,13 +76,16 @@ video {
 #app {
   position: relative;
   height: 100%;
+
   width: 100%;
 }
 
 #wrapper {
-  padding: 0px;
+  min-width: 100%;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
+  overflow: scroll;
 }
 
 h1 {
@@ -300,6 +303,72 @@ div#intro img {
   }
 }
 
+/*sound anomation*/
+
+.playing {
+  background: rgba(255, 255, 255, 0.1);
+  width: 4rem;
+  height: 4rem;
+  border-radius: 0.3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  position: fixed;
+  top: 50%;
+  right: calc(50%-2rem);
+  z-index: 1000;
+  opacity: 0;
+}
+
+.playing__bar {
+  display: inline-block;
+  background: white;
+  width: 30%;
+  height: 100%;
+  animation: up-and-down 1.3s ease infinite alternate;
+}
+
+.playing__bar1 {
+  height: 60%;
+  background: red;
+}
+
+.playing__bar2 {
+  height: 30%;
+  animation-delay: -2.2s;
+  background: blue;
+}
+
+.playing__bar3 {
+  height: 75%;
+  animation-delay: -3.7s;
+  background: rgb(29, 165, 59);
+}
+
+@keyframes up-and-down {
+  10% {
+    height: 30%;
+  }
+
+  30% {
+    height: 100%;
+  }
+
+  60% {
+    height: 50%;
+  }
+
+  80% {
+    height: 75%;
+  }
+
+  100% {
+    height: 60%;
+  }
+}
+
 #KaiOSAd {
   height: 200px;
   width: 240px;
@@ -386,13 +455,14 @@ div#options div#import-text {
   display: none;
 }
 
-#map {
-  height: 100vh;
-  width: 100vw;
-  position: relative;
-  z-index: 0;
+div#map-container {
+  width: 100%;
+  position: fixed;
+  overflow: hidden;
+  margin: 0px 0 0 0;
   top: 0;
   left: 0;
+  z-index: 0;
 }
 
 img.myMarker {
@@ -588,11 +658,17 @@ article div.user-date span {
 article img {
   width: 100%;
 }
-
+article .message-map {
+  width: 100%;
+  min-width: 100%;
+  max-height: 100px;
+}
 article .map-component {
   width: 100%;
-  min-width: 90vw;
-  height: auto;
+  min-width: 100%;
+  height: 100px;
+  max-height: 100px;
+  overflow: hidden;
 }
 
 [id*="page-"] {
@@ -775,6 +851,7 @@ div#message-input input {
     min-width: 400px;
     max-width: 400px !important;
     display: block;
+    overflow: hidden;
   }
 
   article img {
@@ -785,6 +862,7 @@ div#message-input input {
     min-width: 100%;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     overflow: scroll;
   }
 
@@ -880,6 +958,7 @@ div#message-input input {
   article {
     min-width: 400px;
     max-width: 400px !important;
+    overflow: hidden;
   }
 
   article img {
@@ -890,6 +969,7 @@ div#message-input input {
     min-width: 100%;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     overflow: scroll;
   }
 
