--- a/application/assets/css/leaflet.css
+++ b/application/assets/css/leaflet.css
@@ -399,7 +399,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 /* Default icon URLs */
 .leaflet-default-icon-path {
-  background-image: url("./marker-icon.png");
+  background-image: url("marker-icon.png");
 }
 
 /* attribution and scale controls */
