--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -106,9 +106,14 @@ label {
 }
 
 article img {
-  max-width: 90vw;
+  width: 100%;
   height: auto;
   display: block;
+  padding: 10px;
+}
+
+#chat {
+  padding: 40px 0 40px 0;
 }
 
 img[src=""] {
@@ -388,6 +393,10 @@ div#intro img {
   min-width: 100vw;
 }
 
+#app {
+  max-width: 500px;
+}
+
 /*///////////////////////////
 ///TOAST////////////////*/
 
@@ -661,6 +670,9 @@ article {
   margin: 0 0 10px 0;
   padding: 3px;
   width: 100%;
+  position: relative;
+  max-width: 400px;
+  overflow: hidden;
 }
 
 article div.user-date {
@@ -677,15 +689,10 @@ article img {
 }
 article .message-map {
   width: 100%;
-  min-width: 100%;
-  max-height: 100px;
-}
-article .map-component {
-  width: 100%;
-  min-width: 100%;
-  height: 100px;
-  max-height: 100px;
-  overflow: hidden;
+  height: 150px;
+  position: relative;
+  background: url("map.png");
+  background-size: cover;
 }
 
 [id*="page-"] {
@@ -784,10 +791,6 @@ article.me div.message-main {
   background: rgba(167, 172, 164, 0.288);
   border-radius: 7px;
   padding: 5px 5px 5px 5px;
-}
-
-article div.message-main:empty {
-  display: none;
 }
 
 article.image {
@@ -966,8 +969,8 @@ div#message-input input {
 
 @media screen and (min-width: 1500px) and (max-width: 3000px) {
   #app {
-    min-width: 100%;
-    max-width: 100%;
+    min-width: 400px;
+    max-width: 400px;
     overflow: scroll;
     padding: 50px 0 0 0;
   }
