--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -1035,6 +1035,9 @@ div#bottom-bar div.button-center:hover {
   }
 }
 
+.logo-addressbook{margin:0 0 20px 0;
+width:200px;}
+
 @media screen and (min-width: 1500px) and (max-width: 3000px) {
   #app {
     overflow: scroll;
