--- a/application/assets/css/grid.css
+++ b/application/assets/css/grid.css
@@ -504,50 +504,34 @@
   flex-direction: column;
 }
 
-.justify-content-start {
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
+.justify-spacearound {
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
 }
 
-.justify-content-end {
-  -webkit-justify-content: flex-end;
-  justify-content: flex-end;
-}
-
-.algin-item-start {
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-}
-
-.algin-item-end {
-  -webkit-align-items: flex-end;
-  align-items: flex-end;
-}
-
-.align-item-center {
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.justify-content-spacebetween {
+.justify-spacebetween {
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
 
-.justify-content-spacearound {
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-align-content: space-around;
-  -ms-flex-line-pack: distribute;
-  align-content: space-around;
+.justify-center {
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 
-.justify-content-center {
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+.justify-start {
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
+
+.align-start {
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+}
+
+.align-center {
+  -webkit-align-items: center;
+  align-items: center;
 }
 
 .width-100 {
